--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,9 @@
  
 <html>
     <head>
-      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <title>{{ page.title }}</title>
+     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>{{site.title}}</title>
     </head>
     <body>
  
