--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,8 @@
  
 <html>
     <head>
-     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{site.title}}</title>
+      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+      <title>{{ page.title }}</title>
     </head>
     <body>
  
